MODON MRE BPDEV/force-app/main/default/objects/Sales_Operations_Associate_Assignment__c/Sales_Operations_Associate_Assignment__c.object-meta.xml
<CustomObject>
    <label>Sales Operations Associate Assignment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Operations Associate Assignment Matrix</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Operations Associate Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>