MODON MRE BPDEV/force-app/main/default/objects/Sales_Operations_Associate_Assignment__c/fields/Backup_Sales_Operations_Associate__c.field-meta.xml
<CustomField>
    <fullName>Backup_Sales_Operations_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup Sales Operations Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_Associate_Assignment_Matrix2</relationshipName>
    <type>Lookup</type>
</CustomField>