MODON MRE BPDEV/force-app/main/default/objects/Sales_Operations_Associate_Assignment__c/fields/Sales_Associate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_Associate_Assignment_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>